# M2x

./: .gitignore  README.md  README_zh.md  pyproject.toml  pytest.ini  test.py
m2x/: __init__.py  clip.py
m2x.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
m2x/Converter/: HTML2X.py  __init__.py  core.py  extension.html  feature.py  functional.py  get_config.py
m2x/server/: __init__.py  app.py
m2x/static/: index.html
m2x/static/css/: style.css
m2x/static/js/: main.js
test/: clip.py  conftest.py
test/Converter/: md_to_PDF.py  md_to_html.py  md_to_word.py
tests/: conftest.py  test_clip.py
tests/test_Converter/: test_HTML2X.py  test_core.py  test_md_to_PDF.py  test_md_to_html.py  test_md_to_word.py
tests/test_server/: test_app.py
