[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"


[project]
name="m2x"

version="0.1.0"

authors=[{name="Ricardo",email="13838152117@139.com"}]

readme="README.md"

requires-python=">=3.10.19"

dependencies=[
    "markdown2>=2.5.4",
    "weasyprint>=68.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0" ,
    "docx>=1.2.0",
    "beautifulsoup4>=4.14.3"
]

[project.optional-dependencies]
dev = ["pytest>= 9.0.2 "]

[project.scripts]
m2x = "m2x.clip:main"

[tool.setuptools]
packages = ["m2x"]